build: disable renovate auto-rebase
It is to avoid CI consumption because we have a lot of unmergeable dependencies.

See documentation at https://docs.renovatebot.com/configuration-options/#rebasewhen

--- a/renovate.json
+++ b/renovate.json
@@ -10,6 +10,7 @@
     ":enableVulnerabilityAlerts",
     ":semanticCommits"
   ],
+  "rebaseWhen": "never",
   "packageRules": [
     {
       "matchDepTypes": ["devDependencies"],
