--- a/.env.development
+++ b/.env.development
@@ -24,3 +24,4 @@ REACT_APP_EDITORS_MFE_MANIFEST_FILE=https://cdn.fromdoppler.com/editors-webapp/a
 REACT_APP_MENU_MFE_MANIFEST_FILE=https://cdn.fromdoppler.com/doppler-menu-mfe/asset-manifest-main.json
 REACT_APP_SESSION_MFE_MANIFEST_FILE=https://cdn.fromdoppler.com/doppler-session-mfe/asset-manifest-main.json
 REACT_APP_STYLE_GUIDE_MANIFEST_FILE=https://cdn.fromdoppler.com/doppler-style-guide/asset-manifest-main.json
+REACT_APP_DOPPLER_SYSTEM_USAGE_URL=http://localhost:3000
