--- a/.env.int
+++ b/.env.int
@@ -26,3 +26,4 @@ REACT_APP_EDITORS_MFE_MANIFEST_FILE=https://cdn.fromdoppler.com/editors-webapp/a
 REACT_APP_MENU_MFE_MANIFEST_FILE=https://cdn.fromdoppler.com/doppler-menu-mfe/asset-manifest-INT.json
 REACT_APP_SESSION_MFE_MANIFEST_FILE=https://cdn.fromdoppler.com/doppler-session-mfe/asset-manifest-INT.json
 REACT_APP_STYLE_GUIDE_MANIFEST_FILE=https://cdn.fromdoppler.com/doppler-style-guide/asset-manifest-INT.json
+REACT_APP_DOPPLER_SYSTEM_USAGE_URL=https://funint.fromdoppler.net/doppler-system-usage
