--- a/.env.qa
+++ b/.env.qa
@@ -1,5 +1,5 @@
 REACT_APP_DOPPLER_LEGACY_URL=https://appqa.fromdoppler.net
-REACT_APP_DOPPLER_SITES_URL= https://www.fromdoppler.com
+REACT_APP_DOPPLER_SITES_URL= https://qa.fromdoppler.com
 REACT_APP_DATAHUB_URL=https://hubapisecqa.fromdoppler.com
 REACT_APP_RECAPTCHA_PUBLIC_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
 REACT_APP_USE_DOPPLER_LEGACY_LOGIN=false
