feat: add beamerId

--- a/.env
+++ b/.env
@@ -19,3 +19,4 @@ REACT_APP_MANUAL_STATUS_FILE_URL = https://cdn.fromdoppler.com/webapp-status.jso
 CI=true
 REACT_APP_TYPEFORMID_ES=YOFOxKil
 REACT_APP_TYPEFORMID_EN=ocbmHdfW
+REACT_APP_BEAMER_ID=mYVtANNa50707
