--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@types/jest": "29.2.3",
     "@types/jwt-decode": "^3.1.0",
     "@types/node": "^18.7.13",
-    "@types/react-dom": "^18.0.0",
     "@types/react": "18.0.20",
+    "@types/react-dom": "^18.0.0",
     "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-intl": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
@@ -54,6 +54,7 @@
     "react-side-effect": ">=2.1.2",
     "react-test-renderer": "^16.14.0",
     "semantic-release": "^19.0.0",
+    "smoothscroll-polyfill": "^0.4.4",
     "styled-components": "^5.0.0",
     "stylelint": "^14.11.0",
     "typescript": "^4.0.0",
