--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@kunukn/react-collapse": "^2.2.9",
     "@semantic-release/exec": "^6.0.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^12.1.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@typeform/embed-react": "^2.0.0",
     "@types/intl-tel-input": "^17.0.5",
@@ -50,11 +50,11 @@
     "react-linkedin-insight": "^0.1.3",
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "react-side-effect": ">=2.1.2",
+    "react-test-renderer": "^18.0.0",
     "semantic-release": "^20.0.0",
     "smoothscroll-polyfill": "^0.4.4",
-    "react-test-renderer": "^18.0.0",
     "styled-components": "^5.0.0",
     "stylelint": "^14.11.0",
     "typescript": "^4.0.0",
@@ -165,6 +165,7 @@
     "comment": "Resolution to avoid test warning: [...] Please update the following components: SideEffect(NullComponent)"
   },
   "devDependencies": {
+    "@babel/helper-define-map": "^7.18.6",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@testing-library/dom": "^8.17.1",
