feat: add jest-environment-jsdom

--- a/package.json
+++ b/package.json
@@ -69,9 +69,9 @@
     "build:int": "env-cmd -f .env.int yarn build",
     "build:development": "env-cmd -f .env.development yarn build",
     "build:demo": "env-cmd -f .env.demo yarn build",
-    "test:ci": "cross-env CI=true react-scripts test --coverage --env=jest-environment-jsdom-sixteen --testTimeout=120000",
-    "test:related": "react-scripts --openssl-legacy-provider test --env=jest-environment-jsdom-sixteen --testTimeout=120000 -b --findRelatedTests",
-    "test": "react-scripts --openssl-legacy-provider test --coverage --env=jest-environment-jsdom-sixteen --watchAll=true --testTimeout=120000",
+    "test:ci": "cross-env CI=true react-scripts test --coverage --env=jest-environment-jsdom --testTimeout=120000",
+    "test:related": "react-scripts --openssl-legacy-provider test --env=jest-environment-jsdom --testTimeout=120000 -b --findRelatedTests",
+    "test": "react-scripts --openssl-legacy-provider test --coverage --env=jest-environment-jsdom --watchAll=true --testTimeout=120000",
     "eject": "react-scripts --openssl-legacy-provider eject",
     "eclint": "eclint check  src/**/*.js",
     "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css}\"",
@@ -173,7 +173,7 @@
     "@types/react-credit-cards": "^0.8.1",
     "@types/styled-components": "^5.1.15",
     "husky": "^8.0.1",
-    "jest-environment-jsdom-sixteen": "^2.0.0",
+    "jest-environment-jsdom": "^29.4.1",
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.16",
     "postcss-scss": "^4.0.4",
