--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "smoothscroll-polyfill": "^0.4.4",
     "styled-components": "^6.0.0",
     "stylelint": "^14.11.0",
-    "typescript": "^5.0.0",
+    "typescript": "4.5",
     "url-parse": "^1.5.10"
   },
   "scripts": {
