feat: add exclusive discount for argentina

--- a/.env.qa
+++ b/.env.qa
@@ -28,3 +28,4 @@ REACT_APP_SESSION_MFE_MANIFEST_FILE=https://cdn.fromdoppler.com/doppler-session-
 REACT_APP_STYLE_GUIDE_MANIFEST_FILE=https://cdn.fromdoppler.com/doppler-style-guide/asset-manifest-main.json
 REACT_APP_DOPPLER_SYSTEM_USAGE_URL=https://funqa.fromdoppler.net/doppler-system-usage
 REACT_APP_BEAMER_ID=OKjmyOFa52044
+REACT_APP_PROMOCODE_ARGENTINA=20%4RG3NT!N4
