--- a/.env.development
+++ b/.env.development
@@ -26,3 +26,4 @@ REACT_APP_SESSION_MFE_MANIFEST_FILE=https://cdn.fromdoppler.com/doppler-session-
 REACT_APP_STYLE_GUIDE_MANIFEST_FILE=https://cdn.fromdoppler.com/doppler-style-guide/asset-manifest-main.json
 REACT_APP_DOPPLER_SYSTEM_USAGE_URL=http://localhost:3000
 REACT_APP_BEAMER_ID=OKjmyOFa52044
+REACT_APP_PROMOCODE_ARGENTINA=20%4RG3NT!N4
