fix: change correct my landings url

--- a/.env.development
+++ b/.env.development
@@ -27,3 +27,4 @@ REACT_APP_STYLE_GUIDE_MANIFEST_FILE=https://cdn.fromdoppler.com/doppler-style-gu
 REACT_APP_DOPPLER_SYSTEM_USAGE_URL=http://localhost:3000
 REACT_APP_BEAMER_ID=OKjmyOFa52044
 REACT_APP_PROMOCODE_ARGENTINA=20%4RG3NT!N4
+REACT_APP_DOPPLER_MY_LANDINGS_URL=https://landingsqa.fromdoppler.net/choose-a-template
