--- a/.env.int
+++ b/.env.int
@@ -29,3 +29,4 @@ REACT_APP_STYLE_GUIDE_MANIFEST_FILE=https://cdn.fromdoppler.com/doppler-style-gu
 REACT_APP_DOPPLER_SYSTEM_USAGE_URL=https://funint.fromdoppler.net/doppler-system-usage
 REACT_APP_BEAMER_ID=OKjmyOFa52044
 REACT_APP_PROMOCODE_ARGENTINA=20%4RG3NT!N4
+REACT_APP_DOPPLER_MY_LANDINGS_URL=https://landingsqa.fromdoppler.net/choose-a-template
