--- a/.env.production
+++ b/.env.production
@@ -29,3 +29,4 @@ REACT_APP_STYLE_GUIDE_MANIFEST_FILE=https://cdn.fromdoppler.com/doppler-style-gu
 REACT_APP_DOPPLER_SYSTEM_USAGE_URL=https://fun.fromdoppler.com/doppler-system-usage
 REACT_APP_BEAMER_ID=wCWRrvwa50706
 REACT_APP_PROMOCODE_ARGENTINA=20%4RG3NT!N4
+REACT_APP_DOPPLER_MY_LANDINGS_URL=https://landings.fromdoppler.com/choose-a-template
