--- a/.env.production
+++ b/.env.production
@@ -30,3 +30,4 @@ REACT_APP_DOPPLER_SYSTEM_USAGE_URL=https://fun.fromdoppler.com/doppler-system-us
 REACT_APP_BEAMER_ID=wCWRrvwa50706
 REACT_APP_PROMOCODE_ARGENTINA=20%4RG3NT!N4
 REACT_APP_DOPPLER_MY_LANDINGS_URL=https://landings.fromdoppler.com/choose-a-template
+REACT_APP_DOPPLER_CAN_BUY_CHAT_PLAN=false
