--- a/.env.int
+++ b/.env.int
@@ -31,3 +31,4 @@ REACT_APP_BEAMER_ID=OKjmyOFa52044
 REACT_APP_PROMOCODE_ARGENTINA=20%4RG3NT!N4
 REACT_APP_DOPPLER_MY_LANDINGS_URL=https://landingsqa.fromdoppler.net/choose-a-template
 REACT_APP_DOPPLER_CAN_BUY_CHAT_PLAN=true
+REACT_APP_DOPPLER_CONVERSATIONS_URL=https://conversationsqa.fromdoppler.net
