--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-intl": "^6.1.0",
     "react-linkedin-insight": "^0.1.3",
     "react-markdown": "^8.0.3",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
