--- a/.env.int
+++ b/.env.int
@@ -1,6 +1,6 @@
 REACT_APP_DOPPLER_LEGACY_URL=https://appint.fromdoppler.net
 REACT_APP_DOPPLER_SITES_URL= https://qa.fromdoppler.com
-REACT_APP_DATAHUB_URL=https://hubapisecint.fromdoppler.com
+REACT_APP_DATAHUB_URL=https://apisint.fromdoppler.net
 REACT_APP_RECAPTCHA_PUBLIC_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
 REACT_APP_USE_DOPPLER_LEGACY_LOGIN=false
 REACT_APP_USE_DOPPLER_LEGACY_SIGNUP=false
