--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 REACT_APP_DOPPLER_LEGACY_URL=https://app2.fromdoppler.com
 REACT_APP_DOPPLER_SITES_URL= https://www.fromdoppler.com
-REACT_APP_DATAHUB_URL=https://hubapisec.fromdoppler.com
+REACT_APP_DATAHUB_URL=https://apis.fromdoppler.com
 REACT_APP_RECAPTCHA_PUBLIC_KEY=6LddzZ8UAAAAAPSs09txKtTl9ewIyqYihfOC-dzf
 REACT_APP_USE_DOPPLER_LEGACY_LOGIN=false
 REACT_APP_USE_DOPPLER_LEGACY_SIGNUP=false
