--- a/.env
+++ b/.env
@@ -20,3 +20,4 @@ CI=true
 REACT_APP_TYPEFORMID_ES=YOFOxKil
 REACT_APP_TYPEFORMID_EN=ocbmHdfW
 REACT_APP_BEAMER_ID=OKjmyOFa52044
+REACT_APP_USERPILOT_TOKEN=STG-NX-d04cfcac
