--- a/.env.production
+++ b/.env.production
@@ -32,3 +32,4 @@ REACT_APP_PROMOCODE_ARGENTINA=20%4RG3NT!N4
 REACT_APP_DOPPLER_MY_LANDINGS_URL=https://landings.fromdoppler.com/choose-a-template
 REACT_APP_DOPPLER_CAN_BUY_CHAT_PLAN=true
 REACT_APP_DOPPLER_CONVERSATIONS_URL=https://conversations.fromdoppler.com
+REACT_APP_USERPILOT_TOKEN=NX-d04cfcac
