--- a/.env.development
+++ b/.env.development
@@ -32,3 +32,4 @@ REACT_APP_DOPPLER_CAN_BUY_CHAT_PLAN=true
 REACT_APP_DOPPLER_CONVERSATIONS_URL=https://conversationsqa.fromdoppler.net
 REACT_APP_USERPILOT_TOKEN=STG-NX-d04cfcac
 REACT_APP_DOPPLER_CAN_BUY_ONSITE_PLAN=true
+REACT_APP_DOPPLER_VALIDATE_CAPTCHA=false
