--- a/.env.production
+++ b/.env.production
@@ -34,3 +34,4 @@ REACT_APP_DOPPLER_CAN_BUY_CHAT_PLAN=true
 REACT_APP_DOPPLER_CONVERSATIONS_URL=https://conversations.fromdoppler.com
 REACT_APP_DOPPLER_CAN_BUY_ONSITE_PLAN=true
 REACT_APP_DOPPLER_ONSITE_URL=https://app.fromdoppler.com/popup-hub
+REACT_APP_DOPPLER_CAN_BUY_PUSHNOTIFICATION_PLAN=false
