--- a/.env.qa
+++ b/.env.qa
@@ -34,3 +34,4 @@ REACT_APP_DOPPLER_CAN_BUY_CHAT_PLAN=true
 REACT_APP_DOPPLER_CONVERSATIONS_URL=https://conversationsqa.fromdoppler.net
 REACT_APP_DOPPLER_CAN_BUY_ONSITE_PLAN=true
 REACT_APP_DOPPLER_ONSITE_URL=https://webappqa.fromdoppler.net/popup-hub
+REACT_APP_DOPPLER_CAN_BUY_PUSHNOTIFICATION_PLAN=true
