--- a/.env.development
+++ b/.env.development
@@ -26,7 +26,7 @@ REACT_APP_SESSION_MFE_MANIFEST_FILE=https://cdn.fromdoppler.com/doppler-session-
 REACT_APP_STYLE_GUIDE_MANIFEST_FILE=https://cdn.fromdoppler.com/doppler-style-guide/asset-manifest-main.json
 REACT_APP_DOPPLER_SYSTEM_USAGE_URL=http://localhost:3000
 REACT_APP_BEAMER_ID=OKjmyOFa52044
-REACT_APP_PROMOCODE_ARGENTINA=20%4RG3NT!N4
+REACT_APP_PROMOCODE_ARGENTINA=
 REACT_APP_DOPPLER_MY_LANDINGS_URL=https://landingsqa.fromdoppler.net/choose-a-template
 REACT_APP_DOPPLER_CAN_BUY_CHAT_PLAN=true
 REACT_APP_DOPPLER_CONVERSATIONS_URL=https://conversationsqa.fromdoppler.net
