feat: implement addon components in the subscription details

--- a/.env.development
+++ b/.env.development
@@ -33,3 +33,5 @@ REACT_APP_DOPPLER_CONVERSATIONS_URL=https://conversationsqa.fromdoppler.net
 REACT_APP_DOPPLER_CAN_BUY_ONSITE_PLAN=true
 REACT_APP_DOPPLER_ONSITE_URL=https://webappint.fromdoppler.net/popup-hub
 REACT_APP_DOPPLER_CAN_BUY_PUSHNOTIFICATION_PLAN=true
+REACT_APP_DOPPLER_BEPLIC_API_URL=http://localhost:10695/
+REACT_APP_DOPPLER_POPUP_HUB_API_URL=http://localhost:10695/
