--- a/.env.int
+++ b/.env.int
@@ -35,3 +35,5 @@ REACT_APP_DOPPLER_CONVERSATIONS_URL=https://conversationsqa.fromdoppler.net
 REACT_APP_DOPPLER_CAN_BUY_ONSITE_PLAN=true
 REACT_APP_DOPPLER_ONSITE_URL=https://webappint.fromdoppler.net/popup-hub
 REACT_APP_DOPPLER_CAN_BUY_PUSHNOTIFICATION_PLAN=true
+REACT_APP_DOPPLER_BEPLIC_API_URL=https://apisint.fromdoppler.net/doppler-beplic
+REACT_APP_DOPPLER_POPUP_HUB_API_URL=https://apisint.fromdoppler.net/doppler-popup-hub-msa
