--- a/.env.production
+++ b/.env.production
@@ -35,3 +35,5 @@ REACT_APP_DOPPLER_CONVERSATIONS_URL=https://conversations.fromdoppler.com
 REACT_APP_DOPPLER_CAN_BUY_ONSITE_PLAN=true
 REACT_APP_DOPPLER_ONSITE_URL=https://app.fromdoppler.com/popup-hub
 REACT_APP_DOPPLER_CAN_BUY_PUSHNOTIFICATION_PLAN=false
+REACT_APP_DOPPLER_BEPLIC_API_URL=https://apis.fromdoppler.com/doppler-beplic
+REACT_APP_DOPPLER_POPUP_HUB_API_URL=https://apis.fromdoppler.com/doppler-popup-hub-msa
