--- a/.env.development
+++ b/.env.development
@@ -35,3 +35,4 @@ REACT_APP_DOPPLER_ONSITE_URL=https://webappint.fromdoppler.net/popup-hub
 REACT_APP_DOPPLER_CAN_BUY_PUSHNOTIFICATION_PLAN=true
 REACT_APP_DOPPLER_BEPLIC_API_URL=http://localhost:10695/
 REACT_APP_DOPPLER_POPUP_HUB_API_URL=http://localhost:10695/
+REACT_APP_USERPILOT_TOKEN=
