--- a/.env.production
+++ b/.env.production
@@ -37,3 +37,4 @@ REACT_APP_DOPPLER_ONSITE_URL=https://app.fromdoppler.com/popup-hub
 REACT_APP_DOPPLER_CAN_BUY_PUSHNOTIFICATION_PLAN=false
 REACT_APP_DOPPLER_BEPLIC_API_URL=https://apis.fromdoppler.com/doppler-beplic
 REACT_APP_DOPPLER_POPUP_HUB_API_URL=https://apis.fromdoppler.com/doppler-popup-hub-msa
+REACT_APP_USERPILOT_TOKEN=NX-d04cfcac
