--- a/.env.qa
+++ b/.env.qa
@@ -37,3 +37,4 @@ REACT_APP_DOPPLER_ONSITE_URL=https://webappqa.fromdoppler.net/popup-hub
 REACT_APP_DOPPLER_CAN_BUY_PUSHNOTIFICATION_PLAN=true
 REACT_APP_DOPPLER_BEPLIC_API_URL=https://apisqa.fromdoppler.net/doppler-beplic
 REACT_APP_DOPPLER_POPUP_HUB_API_URL=https://apisqa.fromdoppler.net/doppler-popup-hub-msa
+REACT_APP_USERPILOT_TOKEN=STG-NX-d04cfcac
