--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "styled-components": "^6.0.0",
     "stylelint": "^14.11.0",
     "typescript": "4.5",
-    "url-parse": "^1.5.10"
+    "url-parse": "^1.5.10",
+    "userpilot": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
