feat: add form to start the flow of cancellation account

--- a/.env.development
+++ b/.env.development
@@ -36,3 +36,4 @@ REACT_APP_DOPPLER_CAN_BUY_PUSHNOTIFICATION_PLAN=true
 REACT_APP_DOPPLER_BEPLIC_API_URL=http://localhost:10695/
 REACT_APP_DOPPLER_POPUP_HUB_API_URL=http://localhost:10695/
 REACT_APP_USERPILOT_TOKEN=
+REACT_APP_DOPPLER_SHOW_CANCELLATION_ACCOUNT_BUTTON=true
