--- a/.env.development
+++ b/.env.development
@@ -37,3 +37,4 @@ REACT_APP_DOPPLER_BEPLIC_API_URL=http://localhost:10695/
 REACT_APP_DOPPLER_POPUP_HUB_API_URL=http://localhost:10695/
 REACT_APP_USERPILOT_TOKEN=
 REACT_APP_DOPPLER_SHOW_CANCELLATION_ACCOUNT_BUTTON=true
+REACT_APP_DOPPLER_CUSTOMER_SUCCESS_CALENDAR_URL=
