--- a/.env.int
+++ b/.env.int
@@ -39,3 +39,4 @@ REACT_APP_DOPPLER_BEPLIC_API_URL=https://apisint.fromdoppler.net/doppler-beplic
 REACT_APP_DOPPLER_POPUP_HUB_API_URL=https://apisint.fromdoppler.net/doppler-popup-hub-msa
 REACT_APP_USERPILOT_TOKEN=STG-NX-d04cfcac
 REACT_APP_DOPPLER_SHOW_CANCELLATION_ACCOUNT_BUTTON=true
+REACT_APP_DOPPLER_CUSTOMER_SUCCESS_CALENDAR_URL=https://calendar.app.google/64H1f6RL4FhPcPVF9
