--- a/.env.qa
+++ b/.env.qa
@@ -40,5 +40,5 @@ REACT_APP_DOPPLER_POPUP_HUB_API_URL=https://apisqa.fromdoppler.net/doppler-popup
 REACT_APP_USERPILOT_TOKEN=STG-NX-d04cfcac
 REACT_APP_DOPPLER_SUPPORT_CANCELLATION_FREE_USER=true
 REACT_APP_DOPPLER_SUPPORT_CANCELLATION_CONTACTS_MONTHLY_USER=true
-REACT_APP_DOPPLER_CUSTOMER_SUCCESS_CALENDAR_URL=
+REACT_APP_DOPPLER_CUSTOMER_SUCCESS_CALENDAR_URL=https://calendar.app.google/64H1f6RL4FhPcPVF9
 REACT_APP_DOPPLER_SUPPORT_CANCELLATION_CONTACTS_CREDITS_USER=false
