chore: add eprotect env variables

--- a/.env.int
+++ b/.env.int
@@ -42,3 +42,6 @@ REACT_APP_DOPPLER_SUPPORT_CANCELLATION_FREE_USER=true
 REACT_APP_DOPPLER_SUPPORT_CANCELLATION_CONTACTS_MONTHLY_USER=true
 REACT_APP_DOPPLER_CUSTOMER_SUCCESS_CALENDAR_URL=
 REACT_APP_DOPPLER_SUPPORT_CANCELLATION_CONTACTS_CREDITS_USER=true
+REACT_APP_USE_EPROTECT=true
+REACT_APP_EPROTECT_PAYPAGE_ID=ASEot2ojNRKS3vVG
+REACT_APP_EPROTECT_REPORT_GROUP=DopplerGroup_INT
