--- a/.env.qa
+++ b/.env.qa
@@ -42,3 +42,6 @@ REACT_APP_DOPPLER_SUPPORT_CANCELLATION_FREE_USER=true
 REACT_APP_DOPPLER_SUPPORT_CANCELLATION_CONTACTS_MONTHLY_USER=true
 REACT_APP_DOPPLER_CUSTOMER_SUCCESS_CALENDAR_URL=https://calendar.app.google/64H1f6RL4FhPcPVF9
 REACT_APP_DOPPLER_SUPPORT_CANCELLATION_CONTACTS_CREDITS_USER=false
+REACT_APP_USE_EPROTECT=false
+REACT_APP_EPROTECT_PAYPAGE_ID=ASEot2ojNRKS3vVG
+REACT_APP_EPROTECT_REPORT_GROUP=DopplerGroup_QA
